tests/invalid/definite/ListElemOf_Invalid_1.whiley
void f(int x):
    assert x in [1,2,3]
